--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>Welcome to the course!</h1>
+        <h1 class="heading">Hover over me!</h1>
     </body>
 </html>
