--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     </head>
     <body>
         <h1 class="heading">Hover over me!</h1>
+            <div class="box"></div>
+    
     </body>
 </html>
