animation for a possible lander

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <body>
         <h1 class="heading">Hover over me!</h1>
             <div class="box"></div>
-    
+
     </body>
 </html>
+
+<!-- Your task is to create two animations that will first cause the background
+    to fade in and expand in width from left to right, then fade in the text in the center. The first animation should take
+ 1.5 seconds, followed by a 0.5 second delay, and finally, 1 second for the text fade-in. Both animations should have an ease-out
+  timing function and run once. All styles should be retained once the animation ends. Good luck! -->
